--- a/01-first-azure-pipeline.yml
+++ b/01-first-azure-pipeline.yml
@@ -4,15 +4,15 @@
 # https://aka.ms/yaml
 
 trigger:
-- main
+  - main
 
 pool: tansen-poko
 
 steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
+  - script: echo Hello, world!
+    displayName: "Run a one-line script"
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+  - script: |
+      echo Add other tasks to build, test, and deploy your project.
+      echo See https://aka.ms/yaml
+    displayName: "Run a multi-line script"
