--- a/02-understanding-stages.yml
+++ b/02-understanding-stages.yml
@@ -9,32 +9,14 @@ stages:
       - job: FirstJob
         steps:
           - bash: echo Build FirstJob
-          - bash: echo $(PipelineLevelVariable)
-          - bash: echo $(Build.BuildNumber)
-          - bash: echo $(Build.BuildId)
-          - bash: echo $(Build.SourceBranchName)
-          - bash: echo $(Build.SourcesDirectory)
-          - bash: echo $(System.DefaultWorkingDirectory)
-          - bash: ls -R $(System.DefaultWorkingDirectory)
-          - bash: echo $(Build.ArtifactStagingDirectory)
-          - bash: java -version
-          - bash: node --version
-          - bash: python --version
-          - bash: mvn -version
-          - bash: ls -R $(Build.ArtifactStagingDirectory)
+          - bash: echo pokemon poko
+          - bash: echo huhu
+          - bash: echo test again
           - task: CopyFiles@2
-            inputs:
-              SourceFolder: "$(System.DefaultWorkingDirectory)"
-              Contents: |
-                **/*.yaml
-                **/*.tf
-              TargetFolder: "$(Build.ArtifactStagingDirectory)"
-          - bash: ls -R $(Build.ArtifactStagingDirectory)
-          - task: PublishBuildArtifacts@1
             inputs:
               PathtoPublish: "$(Build.ArtifactStagingDirectory)"
               ArtifactName: "drop"
-              publishLocation: "Container"
+              publishLocation: "Pipeline"
       - job: SecondJob
         steps:
           - bash: echo Build SecondJob
@@ -45,20 +27,27 @@ stages:
     jobs:
       - job: DevDeployJob
         steps:
+          - download: current
+            artifact: drop
           - bash: echo $(environment)DeployJob
   - stage: QADeploy
     variables:
       environment: QA
-    dependsOn: Build
+    dependsOn:
+      - Build
+      - DevDeploy
     jobs:
       - job: QADeployJob
         steps:
+          - download: current
+            artifact: drop
           - bash: echo $(environment)DeployJob
   - stage: ProdDeploy
     dependsOn:
-      - DevDeploy
       - QADeploy
     jobs:
       - job: ProdDeployJob
         steps:
+          - download: current
+            artifact: drop
           - bash: echo ProdDeployJob
