--- a/02-understanding-stages.yml
+++ b/02-understanding-stages.yml
@@ -1,7 +1,7 @@
 trigger:
   - master
 
-pool: tansen-poko
+pool:tansen-poko
 
 stages:
   - stage: Build
@@ -9,27 +9,15 @@ stages:
       - job: FirstJob
         steps:
           - bash: echo Build FirstJob
-      - job: SecondJob
-        steps:
-          - bash: echo Build SecondJob
-  - stage: DevDeploy
-    dependsOn: Build
-    jobs:
-      - job: DevDeployJob
-        steps:
-          - bash: echo DevDeployJob
-  - stage: QADeploy
-    dependsOn:
-      - Build
-      - DevDeploy
-    jobs:
-      - job: QADeployJob
-        steps:
-          - bash: echo QADeployJob
-  - stage: ProdDeploy
-    dependsOn:
-      - QADeploy
-    jobs:
-      - job: ProdDeployJob
-        steps:
-          - bash: echo ProdDeployJob
+          - bash: echo $(PipelineLevelVariable)
+          - bash: echo $(Build.BuildNumber)
+          - bash: echo $(Build.BuildId)
+          - bash: echo $(Build.SourceBranchName)
+          - bash: echo $(Build.SourcesDirectory)
+          - bash: echo $(System.DefaultWorkingDirectory)
+          - bash: ls -R $(System.DefaultWorkingDirectory)
+          - bash: echo $(Build.ArtifactStagingDirectory)
+          - bash: java -version
+          - bash: node --version
+          - bash: python --version
+          - bash: mvn -version
