--- a/02-understanding-stages.yml
+++ b/02-understanding-stages.yml
@@ -1,8 +1,7 @@
 trigger:
   - master
 
-pool:
-  vmImage: "ubuntu-latest"
+pool: tansen-poko
 
 stages:
   - stage: Build
@@ -36,56 +35,3 @@ stages:
               PathtoPublish: "$(Build.ArtifactStagingDirectory)"
               ArtifactName: "drop"
               publishLocation: "Container"
-# trigger:
-#   - master
-
-# pool: tansen-poko
-
-# stages:
-#   - stage: Build
-#     jobs:
-#       - job: FirstJob
-#         steps:
-#           - bash: echo Build FirstJob
-#           - bash: echo pokemon poko
-#           - bash: echo huhu
-#           - bash: echo test again
-#           - task: CopyFiles@2
-#             inputs:
-#               PathtoPublish: "$(Build.ArtifactStagingDirectory)"
-#               ArtifactName: "drop"
-#               publishLocation: "Pipeline"
-#       - job: SecondJob
-#         steps:
-#           - bash: echo Build SecondJob
-#   - stage: DevDeploy
-#     variables:
-#       environment: Dev
-#     dependsOn: Build
-#     jobs:
-#       - job: DevDeployJob
-#         steps:
-#           - download: current
-#             artifact: drop
-#           - bash: echo $(environment)DeployJob
-#   - stage: QADeploy
-#     variables:
-#       environment: QA
-#     dependsOn:
-#       - Build
-#       - DevDeploy
-#     jobs:
-#       - job: QADeployJob
-#         steps:
-#           - download: current
-#             artifact: drop
-#           - bash: echo $(environment)DeployJob
-#   - stage: ProdDeploy
-#     dependsOn:
-#       - QADeploy
-#     jobs:
-#       - job: ProdDeployJob
-#         steps:
-#           - download: current
-#             artifact: drop
-#           - bash: echo ProdDeployJob
